--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed|IBM+Plex+Sans:700');
 
+
 body {
 	background: rgba(0, 0, 0, 0.9);
 	margin: 0;
 	color: #FFF;
 	font-family: 'IBM Plex Sans Condensed', sans-serif;
+	--emphasis-color: #8ed6ff;
 }
 
 .showcase::after {
@@ -21,12 +23,53 @@ body {
 	/* on hover, blur is removed */
 	-webkit-filter: blur(10px);
 	        filter: blur(10px);
-	-webkit-transition: all 500ms;
-	-webkit-transition: all 500ms;
-	transition: all 500ms;
+	-webkit-transition: all 1000ms;
+	-webkit-transition: all 1000ms;
+	transition: all 1000ms;
 }
 
 .showcase:hover::after {
 	-webkit-filter: blur(0px);
 	        filter: blur(0px);
+}
+
+.showcase:hover .content {
+	-webkit-filter: blur(2px);
+	        filter: blur(2px);
+}
+
+.content {
+	/* this section should be placed inside the image */
+	position: absolute;
+	top: 10%;
+	left: 50%;
+	margin-top: 105px;
+	margin-left: -145px;
+	width: 300px;
+	height: 350px;
+	text-align: center;
+	z-index: 1;
+	-webkit-transition: all 1000ms;
+	transition: all 1000ms;
+}
+
+.content .logo {
+	height: 180px;
+	width: 180px
+}
+
+.content .title {
+	font-size: 2.2rem;
+	margin-top: 1rem;
+}
+
+.content .xl-primary-text {
+	font-size: 2.5rem;
+	color: var(--emphasis-color);
+	padding-left: 2px;
+}
+
+.content .text {
+	line-height: 1.7;
+	margin-top: 1rem;
 }
