--- a/style.css
+++ b/style.css
@@ -73,3 +73,50 @@ body {
 	line-height: 1.7;
 	margin-top: 1rem;
 }
+
+/* SERVICES SECTION */
+.container {
+	max-width: 960px;
+	margin: auto;
+	overflow: hidden;
+	padding: 4rem 1rem;
+}
+
+.grid-3 {
+	display: grid;
+	grid-gap: 20px;
+	grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-2 {
+	display: grid;
+	grid-gap: 20px;
+	grid-template-columns: repeat(2, 1fr);
+}
+
+.center {
+	text-align: center;
+	margin: auto;
+}
+
+.about h2 {
+	color: var(--emphasis-color);
+}
+
+.bg-light {
+	background: #F4F4F4;
+	color: #333;
+}
+
+.bg-dark {
+	background: #333;
+	color: #F4F4F4;
+}
+
+footer p {
+	margin: 0;
+}
+
+footer {
+	padding: 2.2rem;
+}
