Add media queries for smaller display types.

--- a/style.css
+++ b/style.css
@@ -120,3 +120,43 @@ footer p {
 footer {
 	padding: 2.2rem;
 }
+
+/* MEDIA QUERIES */
+@media (max-width: 560px) {
+	.showcase::after {
+		height: 50vh;
+	}
+
+	.content {
+		top: 5%;
+		margin-top: 5px;
+	}
+
+	.content .logo {
+		height: 140px;
+		width: 140px;
+	}
+
+	.content .text {
+		display: none;
+	}
+
+	.grid-3, .grid-2 {
+		grid-template-columns: 1fr;
+	}
+
+	.services div {
+		padding: 1.2rem 1rem
+	}
+}
+
+/* LANDSCAPE LAYOUT */
+@media (max-height: 500px) {
+	.content .title, .content .text {
+		display: none;
+	}
+
+	.content {
+		top: 0;
+	}
+}
