--- a/style.css
+++ b/style.css
@@ -1,162 +1,179 @@
-@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed|IBM+Plex+Sans:700');
-
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed|IBM+Plex+Sans:700");
 
 body {
-	background: rgba(0, 0, 0, 0.9);
-	margin: 0;
-	color: #FFF;
-	font-family: 'IBM Plex Sans Condensed', sans-serif;
-	--emphasis-color: #8ed6ff;
+  background: rgba(0, 0, 0, 0.9);
+  margin: 0;
+  color: #fff;
+  font-family: "IBM Plex Sans Condensed", sans-serif;
+  --emphasis-color: #8ed6ff;
+  --hover-color: #ff4949;
 }
 
 .showcase::after {
-/* interestingly enough, the background doesn't render WITHOUT the content property, even if it's an empty string... */
-	content: '';
-	height: 100vh;
-	width: 100%;
-	background-image: url(images/showcase.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	display: block;
+  /* interestingly enough, the background doesn't render WITHOUT the content property, even if it's an empty string... */
+  content: "";
+  height: 100vh;
+  width: 100%;
+  background-image: url(images/showcase.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: block;
 
-	/* on hover, blur is removed */
-	-webkit-filter: blur(10px);
-	        filter: blur(10px);
-	-webkit-transition: all 1000ms;
-	-webkit-transition: all 1000ms;
-	transition: all 1000ms;
+  /* on hover, blur is removed */
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
+  -webkit-transition: all 1000ms;
+  -webkit-transition: all 1000ms;
+  transition: all 1000ms;
 }
 
 .showcase:hover::after {
-	-webkit-filter: blur(0px);
-	        filter: blur(0px);
+  -webkit-filter: blur(0px);
+  filter: blur(0px);
 }
 
 .showcase:hover .content {
-	-webkit-filter: blur(2px);
-	        filter: blur(2px);
+  -webkit-filter: blur(2px);
+  filter: blur(2px);
 }
 
 .content {
-	/* this section should be placed inside the image */
-	position: absolute;
-	top: 10%;
-	left: 50%;
-	margin-top: 105px;
-	margin-left: -145px;
-	width: 300px;
-	height: 350px;
-	text-align: center;
-	z-index: 1;
-	-webkit-transition: all 1000ms;
-	transition: all 1000ms;
+  /* this section should be placed inside the image */
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  margin-top: 105px;
+  margin-left: -145px;
+  width: 300px;
+  height: 350px;
+  text-align: center;
+  z-index: 1;
+  -webkit-transition: all 1000ms;
+  transition: all 1000ms;
 }
 
 .content .logo {
-	height: 180px;
-	width: 180px
+  height: 180px;
+  width: 180px;
 }
 
 .content .title {
-	font-size: 2.2rem;
-	margin-top: 1rem;
+  font-size: 2.2rem;
+  margin-top: 1rem;
 }
 
 .content .xl-primary-text {
-	font-size: 2.5rem;
-	color: var(--emphasis-color);
-	padding-left: 2px;
+  font-size: 2.5rem;
+  color: var(--emphasis-color);
+  padding-left: 2px;
 }
 
 .content .text {
-	line-height: 1.7;
-	margin-top: 1rem;
+  line-height: 1.7;
+  margin-top: 1rem;
 }
 
 /* SERVICES SECTION */
 .container {
-	max-width: 960px;
-	margin: auto;
-	overflow: hidden;
-	padding: 4rem 1rem;
+  max-width: 960px;
+  margin: auto;
+  overflow: hidden;
+  padding: 4rem 1rem;
 }
 
 .grid-3 {
-	display: grid;
-	grid-gap: 20px;
-	grid-template-columns: repeat(3, 1fr);
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .grid-2 {
-	display: grid;
-	grid-gap: 20px;
-	grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .center {
-	text-align: center;
-	margin: auto;
+  text-align: center;
+  margin: auto;
 }
 
 .about h2 {
-	color: var(--emphasis-color);
+  color: var(--emphasis-color);
 }
 
 .bg-light {
-	background: #F4F4F4;
-	color: #333;
+  background: #f4f4f4;
+  color: #333;
 }
 
 .bg-dark {
-	background: #333;
-	color: #F4F4F4;
+  background: #333;
+  color: #f4f4f4;
 }
 
 footer p {
-	margin: 0;
+  margin: 0;
 }
 
 footer {
-	padding: 2.2rem;
+  padding: 2.2rem;
 }
 
 /* MEDIA QUERIES */
 @media (max-width: 560px) {
-	.showcase::after {
-		height: 50vh;
-	}
+  .showcase::after {
+    height: 50vh;
+  }
 
-	.content {
-		top: 5%;
-		margin-top: 5px;
-	}
+  .content {
+    top: 5%;
+    margin-top: 5px;
+  }
 
-	.content .logo {
-		height: 140px;
-		width: 140px;
-	}
+  .content .logo {
+    height: 140px;
+    width: 140px;
+  }
 
-	.content .text {
-		display: none;
-	}
+  .content .text {
+    display: none;
+  }
 
-	.grid-3, .grid-2 {
-		grid-template-columns: 1fr;
-	}
+  .grid-3,
+  .grid-2 {
+    grid-template-columns: 1fr;
+  }
 
-	.services div {
-		padding: 1.2rem 1rem
-	}
+  .services div {
+    padding: 1.2rem 1rem;
+  }
+}
+
+.contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact i {
+  padding-right: 2rem;
+}
+
+.contact a:hover {
+  transition: all 0.5s ease-in-out;
+  color: var(--hover-color);
 }
 
 /* LANDSCAPE LAYOUT */
 @media (max-height: 500px) {
-	.content .title, .content .text {
-		display: none;
-	}
+  .content .title,
+  .content .text {
+    display: none;
+  }
 
-	.content {
-		top: 0;
-	}
+  .content {
+    top: 0;
+  }
 }
